data/derived/comb/progs/unify/prog6812.ml.out
Characters 514-515:
  | Flip (a, b, c) -> if eval(a, x, y) > eval(b, x, y) then eval((c *. -1), x, y) else eval (c, x ,y);;
                                                                  ^
Error: This expression has type expr but an expression was expected of type
         float
